{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 47,
  "lineage": "3fb4aa89-1e2d-aefc-80a2-e2f1d0b73171",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "geico_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:335535486645:instance/i-0a6b7ab69f9f57d4e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6b7ab69f9f57d4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "w7-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0adce3fdda5edfa60"
              }
            ],
            "primary_network_interface_id": "eni-0adce3fdda5edfa60",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-13-218-111-40.compute-1.amazonaws.com",
            "public_ip": "13.218.111.40",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-041e89b3a766f13b4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfa06f66f427e7b6",
            "tags": {
              "Name": "geico_Web_server_0"
            },
            "tags_all": {
              "Name": "geico_Web_server_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e82b35472c5baa34"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "335535486645",
            "id": "i-0a6b7ab69f9f57d4e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.geico_sg",
            "aws_subnet.geico_public",
            "aws_vpc.geico"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:335535486645:instance/i-0aac32c43a1a28207",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aac32c43a1a28207",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "w7-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b768646ac2d65ac0"
              }
            ],
            "primary_network_interface_id": "eni-0b768646ac2d65ac0",
            "private_dns": "ip-10-0-1-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.110",
            "public_dns": "ec2-13-220-62-37.compute-1.amazonaws.com",
            "public_ip": "13.220.62.37",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d5356684a63888eb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfa06f66f427e7b6",
            "tags": {
              "Name": "geico_Web_server_1"
            },
            "tags_all": {
              "Name": "geico_Web_server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e82b35472c5baa34"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "335535486645",
            "id": "i-0aac32c43a1a28207",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.geico_sg",
            "aws_subnet.geico_public",
            "aws_vpc.geico"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:335535486645:instance/i-08314482f7db57207",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08314482f7db57207",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "w7-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ab99963a71f81dec"
              }
            ],
            "primary_network_interface_id": "eni-0ab99963a71f81dec",
            "private_dns": "ip-10-0-1-62.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.62",
            "public_dns": "ec2-34-231-242-202.compute-1.amazonaws.com",
            "public_ip": "34.231.242.202",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-031073a4f73a3472b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfa06f66f427e7b6",
            "tags": {
              "Name": "geico_Web_server_2"
            },
            "tags_all": {
              "Name": "geico_Web_server_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e82b35472c5baa34"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "335535486645",
            "id": "i-08314482f7db57207",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.geico_sg",
            "aws_subnet.geico_public",
            "aws_vpc.geico"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:335535486645:instance/i-078d3fb9cc833cab6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078d3fb9cc833cab6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "w7-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01ce43a7e877571f2"
              }
            ],
            "primary_network_interface_id": "eni-01ce43a7e877571f2",
            "private_dns": "ip-10-0-1-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.69",
            "public_dns": "ec2-44-215-108-144.compute-1.amazonaws.com",
            "public_ip": "44.215.108.144",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ecbbde37fcff84c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfa06f66f427e7b6",
            "tags": {
              "Name": "geico_Web_server_3"
            },
            "tags_all": {
              "Name": "geico_Web_server_3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e82b35472c5baa34"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "335535486645",
            "id": "i-078d3fb9cc833cab6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.geico_sg",
            "aws_subnet.geico_public",
            "aws_vpc.geico"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08982f1c5bf93d976",
            "arn": "arn:aws:ec2:us-east-1:335535486645:instance/i-022e997eedf6c656d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022e997eedf6c656d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "w7-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-054f95a59d21965a0"
              }
            ],
            "primary_network_interface_id": "eni-054f95a59d21965a0",
            "private_dns": "ip-10-0-1-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.7",
            "public_dns": "ec2-3-239-45-29.compute-1.amazonaws.com",
            "public_ip": "3.239.45.29",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c762f6925e7c5cd0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfa06f66f427e7b6",
            "tags": {
              "Name": "geico_Web_server_4"
            },
            "tags_all": {
              "Name": "geico_Web_server_4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e82b35472c5baa34"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "335535486645",
            "id": "i-022e997eedf6c656d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.geico_sg",
            "aws_subnet.geico_public",
            "aws_vpc.geico"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_geico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335535486645:internet-gateway/igw-042733fbd9d1f6a44",
            "id": "igw-042733fbd9d1f6a44",
            "owner_id": "335535486645",
            "region": "us-east-1",
            "tags": {
              "Name": "igw_geico"
            },
            "tags_all": {
              "Name": "igw_geico"
            },
            "vpc_id": "vpc-0444027f7aeb2bebf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.geico"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT_geico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335535486645:route-table/rtb-0dcdbd052e9eb8009",
            "id": "rtb-0dcdbd052e9eb8009",
            "owner_id": "335535486645",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042733fbd9d1f6a44",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RTW_geico"
            },
            "tags_all": {
              "Name": "Public_RTW_geico"
            },
            "timeouts": null,
            "vpc_id": "vpc-0444027f7aeb2bebf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "335535486645",
            "id": "rtb-0dcdbd052e9eb8009",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_geico",
            "aws_vpc.geico"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a6d1968f0d0b3ef",
            "region": "us-east-1",
            "route_table_id": "rtb-0dcdbd052e9eb8009",
            "subnet_id": "subnet-0dfa06f66f427e7b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_geico",
            "aws_route_table.public_RT_geico",
            "aws_subnet.geico_public",
            "aws_vpc.geico"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "geico_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335535486645:security-group/sg-0e82b35472c5baa34",
            "description": "Allow ssh traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e82b35472c5baa34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "geico_sg",
            "name_prefix": "",
            "owner_id": "335535486645",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "geico_web"
            },
            "tags_all": {
              "Name": "geico_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0444027f7aeb2bebf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "335535486645",
            "id": "sg-0e82b35472c5baa34",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.geico"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "geico_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335535486645:subnet/subnet-0dfa06f66f427e7b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfa06f66f427e7b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335535486645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "geico_public"
            },
            "tags_all": {
              "Name": "geico_public"
            },
            "vpc_id": "vpc-0444027f7aeb2bebf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "335535486645",
            "id": "subnet-0dfa06f66f427e7b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.geico"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "geico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335535486645:vpc/vpc-0444027f7aeb2bebf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067ab5059ab3797fe",
            "default_route_table_id": "rtb-0a0a58ecac2aa75fc",
            "default_security_group_id": "sg-0409314c32b5566c6",
            "dhcp_options_id": "dopt-0ee5888eb05454d5a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0444027f7aeb2bebf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0a58ecac2aa75fc",
            "owner_id": "335535486645",
            "region": "us-east-1",
            "tags": {
              "Name": "Geico_APP"
            },
            "tags_all": {
              "Name": "Geico_APP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}